--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 /*---------------------------- Variables*/
 /*Colores*/
+/*Fonts*/
 /*-----------------------------Global*/
 /*Buttons*/
 .btn-general {
@@ -18,16 +19,39 @@
 /*-----------------------------Imagen Incio*/
 #bg-image {
   background-image: url(../img/event-1597531_1280.jpg);
-  height: 400px;
+  height: 500px;
   -webkit-background-size: cover;
   background-size: cover;
-  background-position: center; }
+  background-position: center;
+  z-index: -1;
+  position: relative; }
+  #bg-image .bg-filter {
+    background-color: rgba(75, 96, 117, 0.8);
+    height: 500px;
+    position: absolute;
+    z-index: 1;
+    width: 100%; }
+  #bg-image .front {
+    position: absolute;
+    z-index: 2;
+    padding: 10%; }
+  #bg-image .title {
+    font-size: 6em;
+    text-align: center;
+    color: #ffffff;
+    text-transform: uppercase;
+    z-index: 1000;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700; }
+    #bg-image .title .lightTitle {
+      font-family: "Open Sans", sans-serif;
+      font-weight: 300;
+      font-size: 40px; }
 
 /*-----------------------------Intro section*/
 #intro {
   padding: 30px 0px; }
   #intro .welcomeImage {
-    max-width: 450px;
     margin: 0 auto;
     padding: 5%; }
   #intro p {
