--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,9 @@ $secondaryColor:#f3702a;
 $contrast1:#d34aee;
 $contrast2:#03d968;
 $contrast3:#24f8fb;
-
+/*Fonts*/
+$titles:'Montserrat', sans-serif;
+$paragraph:'Open Sans', sans-serif;
 /*-----------------------------Global*/
 /*Buttons*/
 .btn-general{
@@ -24,16 +26,43 @@ $contrast3:#24f8fb;
 /*-----------------------------Imagen Incio*/
 #bg-image{
 	background-image: url(../img/event-1597531_1280.jpg);
-	height: 400px;
+	height: 500px;
 	-webkit-background-size: cover;
 	background-size: cover;
 	background-position: center;
+	z-index: -1;
+	position: relative;
+	.bg-filter{
+		background-color: rgba(75,96,117,0.8);
+		height: 500px;
+		position: absolute;
+		z-index: 1;
+		width: 100%;
+	}
+	.front{
+		position: absolute;
+		z-index: 2;
+		padding: 10%;
+	}
+	.title{
+		font-size: 6em;
+		text-align: center;
+		color: #ffffff;
+		text-transform: uppercase;
+		z-index: 1000;
+		font-family: $titles;
+		font-weight: 700;
+		.lightTitle{
+			font-family: $paragraph;
+			font-weight: 300;
+			font-size: 40px;
+		}
+	}
 }
 /*-----------------------------Intro section*/
 #intro{
 	padding:30px 0px;
 	.welcomeImage{
-		max-width: 450px;
 		margin: 0 auto;
 		padding: 5%;
 	}
