--- a/css/main.css
+++ b/css/main.css
@@ -57,4 +57,43 @@
   #intro p {
     line-height: 150%; }
 
+/*-----------------------------Numbers*/
+#numbers {
+  position: relative; }
+
+.bg-image2 {
+  background-image: url(../img/wtcTijuana.jpeg);
+  -ms-background-position: center;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%; }
+  .bg-image2:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient(to bottom right, #24f8fb, #f3702a);
+    opacity: .8; }
+  .bg-image2 .data {
+    text-align: center;
+    padding: 3%; }
+    .bg-image2 .data .category {
+      font-family: "Open Sans", sans-serif;
+      font-weight: 400;
+      color: #fff;
+      padding-top: 2%;
+      font-size: 1.5em; }
+    .bg-image2 .data .iconData {
+      color: #fff; }
+      .bg-image2 .data .iconData i {
+        margin-top: 2%; }
+    .bg-image2 .data .number {
+      font-family: "Montserrat", sans-serif;
+      font-weight: 400;
+      color: #fff;
+      font-size: 4em; }
+
 /*# sourceMappingURL=main.css.map */
