--- a/css/main.scss
+++ b/css/main.scss
@@ -70,3 +70,48 @@ $paragraph:'Open Sans', sans-serif;
 		line-height: 150%;
 	}
 }
+/*-----------------------------Numbers*/
+#numbers{
+	position: relative;
+}
+.bg-image2{
+	background-image: url(../img/wtcTijuana.jpeg);
+	-ms-background-position:center;
+	background-position:center;
+	background-size: cover;
+	width: 100%;
+	height:100%;
+	&:before{
+		content: '';
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		background-image:linear-gradient(to bottom right,$contrast3,$secondaryColor);
+		opacity: .8; 
+	}
+	.data{
+		text-align: center;
+		padding: 3%;
+		.category{
+			font-family: $paragraph;
+			font-weight: 400;
+			color: #fff;
+			padding-top: 2%;
+			font-size: 1.5em;
+		}
+		.iconData{
+			color: #fff;
+			i{
+				margin-top: 2%;
+			}
+		}
+		.number{
+			font-family: $titles;
+			font-weight: 400;
+			color: #fff;
+			font-size:4em;
+		}
+	}	
+}
