--- a/css/main.scss
+++ b/css/main.scss
@@ -5,19 +5,34 @@ $secondaryColor:#f3702a;
 $contrast1:#d34aee;
 $contrast2:#03d968;
 $contrast3:#24f8fb;
+
 /*Fonts*/
 $titles:'Montserrat', sans-serif;
 $paragraph:'Open Sans', sans-serif;
 /*-----------------------------Global*/
+body{
+	font-family: $paragraph;
+}
 /*Buttons*/
 .btn-general{
 	border:none;
 	border-radius: 3px;
-	padding: 2%;
+	padding:1% 2%;
+	color: #ffffff;
 }
 .action1{
 	background-color: $contrast1;
-	color: #ffffff;
+}
+.action2{
+	background-color: $secondaryColor;
+}
+.action3{
+	background-color: transparent;
+	border-radius: 10px;
+	padding:1% 2%;
+	border:1px solid #fff;
+	font-size: 12px;
+	text-transform: uppercase;
 }
 /*------------------------------Navbar*/
 .navbar{
@@ -114,4 +129,73 @@ $paragraph:'Open Sans', sans-serif;
 			font-size:4em;
 		}
 	}	
+}
+/*---------------------------Speakers*/
+/* Global */
+#speakers{
+	img{
+		max-width:100%;
+	}
+}
+/*-----------------------------Agenda*/
+#agenda{
+	.tab{
+		margin-top: 30px;
+	}
+	.nav-tabs li{
+		width: 50%;
+		text-align: center;
+	}
+	.table{
+		margin-bottom: 0px !important;
+	}
+}
+/*-------------------------------Prices*/
+#tickets{
+	color:#fff;
+	margin-top: 30px;
+	position: relative;
+	.bg-image3{
+		padding-top: 30px;
+		padding-bottom: 50px;
+		background-image: url(../img/wtcTijuana2.jpeg);
+		-ms-background-position:center;
+		background-position:center;
+		background-size: cover;
+		width: 100%;
+		height:100%;
+		&:before{
+			content: '';
+			position: absolute;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			left: 0;
+			background-image:linear-gradient(to bottom right,$contrast2, $contrast2);
+			opacity: .8; 
+		}
+	}
+	.ticketsPrices{
+		    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+	}
+	.price{
+		background-color: $darkBG;
+		padding: 5%;
+	}
+	.titlePrice{
+		background-color: $darkBG;
+		padding: 5%;
+		opacity: 0.6;
+	}
+	.bold{
+		color: #fff;
+		font-family: $titles;
+		font-size: 2em;
+	}
+	.description{
+		padding: 5%;
+		border:1px solid #bdbdbd;
+		font-size: 16px;
+	}
 }
