--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,15 @@ body {
 
 /*------------------------------Navbar*/
 .navbar {
-  margin-bottom: 0 !important; }
+  margin-bottom: 0 !important;
+  background-color: #337ab7;
+  border-bottom: none; }
+  .navbar a {
+    color: #fff !important; }
+  .navbar li:hover {
+    background-color: #f3702a; }
+  .navbar .navbar-nav > .active > a {
+    background-color: #f3702a !important; }
 
 /*-----------------------------Imagen Incio*/
 #bg-image {
@@ -40,7 +48,8 @@ body {
   z-index: -1;
   position: relative; }
   #bg-image .bg-filter {
-    background-color: rgba(75, 96, 117, 0.8);
+    background-color: rgba(243, 112, 42, 0.57);
+    /*rgba(75,96,117,0.8)*/
     height: 500px;
     position: absolute;
     z-index: 1;
@@ -145,16 +154,16 @@ body {
       right: 0;
       bottom: 0;
       left: 0;
-      background-image: linear-gradient(to bottom right, #03d968, #03d968);
+      background-image: linear-gradient(to bottom right, #03d968, #24f8fb);
       opacity: .8; }
   #tickets .ticketsPrices {
     border-top-right-radius: 5px;
     border-top-left-radius: 5px; }
   #tickets .price {
-    background-color: #4B6075;
+    background-color: #337ab7;
     padding: 5%; }
   #tickets .titlePrice {
-    background-color: #4B6075;
+    background-color: #337ab7;
     padding: 5%;
     opacity: 0.6; }
   #tickets .bold {
