--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,7 @@ $secondaryColor:#f3702a;
 $contrast1:#d34aee;
 $contrast2:#03d968;
 $contrast3:#24f8fb;
+$contrast4:#337ab7;
 
 /*Fonts*/
 $titles:'Montserrat', sans-serif;
@@ -37,6 +38,17 @@ body{
 /*------------------------------Navbar*/
 .navbar{
 	margin-bottom: 0 !important;
+	background-color: $contrast4;
+	border-bottom: none;
+	a{
+		color: #fff !important;
+	}
+	li:hover{
+		background-color: $secondaryColor;
+	}
+	.navbar-nav>.active>a{
+		background-color: $secondaryColor !important;
+	}
 }
 /*-----------------------------Imagen Incio*/
 #bg-image{
@@ -48,7 +60,8 @@ body{
 	z-index: -1;
 	position: relative;
 	.bg-filter{
-		background-color: rgba(75,96,117,0.8);
+		background-color:rgba(243,112,42,0.57);
+		/*rgba(75,96,117,0.8)*/
 		height: 500px;
 		position: absolute;
 		z-index: 1;
@@ -171,7 +184,7 @@ body{
 			right: 0;
 			bottom: 0;
 			left: 0;
-			background-image:linear-gradient(to bottom right,$contrast2, $contrast2);
+			background-image:linear-gradient(to bottom right,$contrast2, $contrast3);
 			opacity: .8; 
 		}
 	}
@@ -180,11 +193,11 @@ body{
     border-top-left-radius: 5px;
 	}
 	.price{
-		background-color: $darkBG;
+		background-color: $contrast4;
 		padding: 5%;
 	}
 	.titlePrice{
-		background-color: $darkBG;
+		background-color: $contrast4;
 		padding: 5%;
 		opacity: 0.6;
 	}
