--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ body {
 /*------------------------------Navbar*/
 .navbar {
   margin-bottom: 0 !important;
-  background-color: #337ab7;
+  background-color: #4B6075;
   border-bottom: none; }
   .navbar a {
     color: #fff !important; }
@@ -37,39 +37,44 @@ body {
     background-color: #f3702a; }
   .navbar .navbar-nav > .active > a {
     background-color: #f3702a !important; }
+  .navbar .logo {
+    max-width: 200px; }
 
 /*-----------------------------Imagen Incio*/
-#bg-image {
-  background-image: url(../img/event-1597531_1280.jpg);
-  height: 500px;
-  -webkit-background-size: cover;
-  background-size: cover;
-  background-position: center;
-  z-index: -1;
+#myCarousel .carousel {
+  height: 500px; }
+#myCarousel .carousel-inner img {
+  width: 100%;
+  max-height: 500px !important; }
+#myCarousel .carousel-caption {
+  margin-bottom: 110px;
+  z-index: 2; }
+#myCarousel .title {
+  font-size: 6em;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  z-index: 1000;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700; }
+  #myCarousel .title .lightTitle {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    font-size: 40px; }
+#myCarousel .filter {
   position: relative; }
-  #bg-image .bg-filter {
-    background-color: rgba(243, 112, 42, 0.57);
-    /*rgba(75,96,117,0.8)*/
-    height: 500px;
-    position: absolute;
-    z-index: 1;
-    width: 100%; }
-  #bg-image .front {
-    position: absolute;
-    z-index: 2;
-    padding: 10%; }
-  #bg-image .title {
-    font-size: 6em;
-    text-align: center;
-    color: #ffffff;
-    text-transform: uppercase;
-    z-index: 1000;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 700; }
-    #bg-image .title .lightTitle {
-      font-family: "Open Sans", sans-serif;
-      font-weight: 300;
-      font-size: 40px; }
+#myCarousel .bg-filter1 {
+  background-color: rgba(243, 112, 42, 0.57);
+  height: 500px;
+  position: absolute;
+  z-index: 1;
+  width: 100%; }
+#myCarousel .bg-filter2 {
+  background-color: rgba(36, 248, 251, 0.57);
+  height: 500px;
+  position: absolute;
+  z-index: 1;
+  width: 100%; }
 
 /*-----------------------------Intro section*/
 #intro {
