--- a/css/main.scss
+++ b/css/main.scss
@@ -171,8 +171,21 @@ body{
 		width: 50%;
 		text-align: center;
 	}
-	.table{
-		margin-bottom: 0px !important;
+	thead tr{
+		background-color: $secondaryColor;
+		color: #fff;
+
+		th{
+			padding: 2%;
+		}
+	}
+	tr{
+		background-color: #fff;
+		text-transform: uppercase;
+		td{
+			padding: 2%;
+			text-align: left;
+		}
 	}
 }
 /*-------------------------------Prices*/
@@ -222,5 +235,19 @@ body{
 		padding: 5%;
 		border:1px solid #bdbdbd;
 		font-size: 16px;
+	}
+}
+/*Footer*/
+footer{
+	background-color: $contrast4;
+	padding: 2% 2% 1% 2%;
+	color: #fff;
+	.socialIcons{
+		.fa-circle{
+			color: #fff;
+		}
+		.fa-inverse{
+			color: $contrast4;
+		}
 	}
 }
