--- a/css/main.css
+++ b/css/main.css
@@ -195,6 +195,13 @@ body {
     font-size: 16px; }
 
 /*Map*/
+#location {
+  padding: 2% 0; }
+  #location h3 {
+    color: #f3702a; }
+  #location .facilities {
+    margin-top: 2%; }
+
 /*Footer*/
 footer {
   background-color: #337ab7;
