--- a/css/main.scss
+++ b/css/main.scss
@@ -240,13 +240,13 @@ body{
 		background-image: url(../img/jose.jpg);
 	}
 	.speaker4{
-		background-image: url(../img/luis.jpg);
+		background-image: url();
 	}
 	.speaker5{
 		background-image: url(../img/isela.jpg);
 	}
 	.speaker6{
-		background-image: url(../img/jorge.jpg);
+		background-image: url(../img/jorgeMtz.jpg);
 	}
 }
 /*-------------------------------Prices*/
