--- a/css/main.css
+++ b/css/main.css
@@ -19,12 +19,12 @@ body {
   background-color: #f3702a; }
 
 .action3 {
-  background-color: transparent;
+  background-color: #f3702a;
   border-radius: 10px;
   padding: 1% 2%;
-  border: 1px solid #fff;
-  font-size: 12px;
-  text-transform: uppercase; }
+  font-size: 14px;
+  text-transform: uppercase;
+  margin: 2%; }
 
 /*------------------------------Navbar*/
 .navbar {
@@ -90,6 +90,9 @@ body {
 /*-----------------------------Intro section*/
 #intro {
   padding: 30px 0px; }
+  #intro h2 {
+    letter-spacing: 2px;
+    text-transform: uppercase; }
   #intro .welcomeImage {
     margin: 0 auto;
     padding: 5%; }
@@ -206,6 +209,7 @@ body {
     -ms-background-position: center;
     background-position: center;
     background-size: cover;
+    background-attachment: fixed;
     width: 100%;
     height: 100%; }
     #tickets .bg-image3:before {
@@ -216,25 +220,34 @@ body {
       bottom: 0;
       left: 0;
       background-image: linear-gradient(to bottom right, #03d968, #24f8fb);
-      opacity: .8; }
+      opacity: .5; }
+  #tickets .titles {
+    text-transform: uppercase;
+    margin-bottom: 2%;
+    font-weight: 400;
+    font-family: "Montserrat", sans-serif;
+    letter-spacing: 2px; }
   #tickets .ticketsPrices {
     border-top-right-radius: 5px;
     border-top-left-radius: 5px; }
   #tickets .price {
     background-color: #337ab7;
-    padding: 5%; }
+    padding: 3%; }
   #tickets .titlePrice {
     background-color: #337ab7;
-    padding: 5%;
-    opacity: 0.6; }
+    padding: 3%;
+    opacity: 0.6;
+    text-transform: uppercase; }
   #tickets .bold {
     color: #fff;
     font-family: "Montserrat", sans-serif;
     font-size: 2em; }
   #tickets .description {
-    padding: 5%;
-    border: 1px solid #bdbdbd;
-    font-size: 16px; }
+    padding: 3%;
+    background-color: rgba(51, 122, 183, 0.28);
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 1px; }
 
 /*Map*/
 #location {
