--- a/css/main.scss
+++ b/css/main.scss
@@ -28,12 +28,12 @@ body{
 	background-color: $secondaryColor;
 }
 .action3{
-	background-color: transparent;
+	background-color: $secondaryColor;
 	border-radius: 10px;
 	padding:1% 2%;
-	border:1px solid #fff;
-	font-size: 12px;
+	font-size: 14px;
 	text-transform: uppercase;
+	margin: 2%;
 }
 /*------------------------------Navbar*/
 .navbar{
@@ -115,6 +115,10 @@ body{
 /*-----------------------------Intro section*/
 #intro{
 	padding:30px 0px;
+	h2{
+		letter-spacing: 2px;
+		text-transform: uppercase;
+	}
 	.welcomeImage{
 		margin: 0 auto;
 		padding: 5%;
@@ -261,6 +265,7 @@ body{
 		-ms-background-position:center;
 		background-position:center;
 		background-size: cover;
+		background-attachment: fixed;
 		width: 100%;
 		height:100%;
 		&:before{
@@ -271,8 +276,15 @@ body{
 			bottom: 0;
 			left: 0;
 			background-image:linear-gradient(to bottom right,$contrast2, $contrast3);
-			opacity: .8; 
+			opacity: .5; 
 		}
+	}
+	.titles{
+		text-transform: uppercase;
+		margin-bottom: 2%;
+		font-weight: 400;
+		font-family: $titles;
+		letter-spacing: 2px;
 	}
 	.ticketsPrices{
 		border-top-right-radius: 5px;
@@ -280,12 +292,13 @@ body{
 	}
 	.price{
 		background-color: $contrast4;
-		padding: 5%;
+		padding: 3%;
 	}
 	.titlePrice{
 		background-color: $contrast4;
-		padding: 5%;
+		padding: 3%;
 		opacity: 0.6;
+		text-transform: uppercase;
 	}
 	.bold{
 		color: #fff;
@@ -293,9 +306,11 @@ body{
 		font-size: 2em;
 	}
 	.description{
-		padding: 5%;
-		border:1px solid #bdbdbd;
+		padding: 3%;
+		background-color: rgba(51,122,183, .28);
 		font-size: 16px;
+		text-transform: uppercase;
+		letter-spacing: 1px;
 	}
 }
 /*Map*/
